snapshots/syntax/library/statements/sendkeys/sendkeys_at_module_level.snap
---
source: src/syntax/library/statements/system_interaction/sendkeys.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SendKeysStatement
      children:
        - kind: SendKeysKeyword
          text: SendKeys
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Test\""
        - kind: Newline
          text: "\n"
